12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|


ChangeLog (2003.nn.nn):
=======================

- ...



ChangeLog (2003.05.10):
=======================

- Applied patches:
  - iometer-2003.02.15-ResultEndTimeHighRes.patch by Daniel Scheibli
    (modifies the result file output to contain the milliseconds as well).
  - iometer-2003.05.04-CIOB5.patch by Matt Robinson (modifies the mechanisms
    for read and writes in IOMeter so that different buffers are used each
    time to avoid cache line collisions and performance lock-ups with some
    chipsets).
  - iometer-2003.02.15-ResultEndTime.patch by Daniel Scheibli (modifies the
    result file output to append the current timestamp after each block of
    results).
  - iometer-2003.02.15-HandleDummy0.patch by Daniel Scheibli (modifies the
    Get_NI_Counter function to handle interfaces without leading blanks
    (like dummy0) as well).
  - iometer-2003.02.15-NoPipe.patch by Daniel Scheibli (removes the Windows
    Pipes support for communication which simplifies the code).
  - iometer-2003.02.15_Get_NI_Counter.patch by Joe Eiler (brings the
    handling for network interfaces that does not contain statistics in
    /proc/net/dev - as for example with Intel Link Aggreation).    
  - iometer-2003.02.15_Exclude_Filesys.patch by Joe Eiler (additional
    command line parameter for Dynamo to pass into file systems which
    should be hidden).
  - iometer-2003.02.15_Extra_Processor_Info.patch by Joe Eiler (brings new
    processor speed values as well as improvements for the GHz CPU detection).
- Cleanup:
   - Updated the handling of the global debug flag (_DEBUG) in the source
     files (check for platform etc.).
   - Changed LINUX_DEBUG and NDEBUG to _DEBUG which is the generic define
     used for this effort.