@@ -36,10 +36,11 @@
 	</tr>
         <tr>
 	  <td class="block">Linux</td>
-          <td class="block">Red Hat 8.0 (2.4.18 kernel, gcc 3.2),<br>
-                            Red Hat 7.2 (2.4.7 kernel, gcc 2.96),<br>
-                            SuSE 8.1 (2.4.19 kernel, gcc 3.2),<br>
-                            SuSE 7.3 (2.4.10 kernel, gcc 2.95.3)</td>
+          <td class="block">Red Hat 9 (2.4.20 kernel, gcc 3.2, glibc 2.3.2 with NPTL)*,<br>
+ 	                    Red Hat 8.0 (2.4.18 kernel, gcc 3.2, glibc 2.2.93),<br>
+                            Red Hat 7.2 (2.4.7 kernel, gcc 2.96, glibc 2.2.5),<br>
+                            SuSE 8.1 (2.4.19 kernel, gcc 3.2, glibc 2.2.5),<br>
+                            SuSE 7.3 (2.4.10 kernel, gcc 2.95.3, glibc 2.2.4)</td>
 	  <td class="block"><i>not supported</i></td>
 	  <td class="block"><i>not supported</i></td>
 	</tr>
@@ -65,7 +66,10 @@
 
   <p class="desc">List of known combinations for version 2003.05.10
   (&quot;<i>should work</i>&quot; means, that this combination is
-  expected to work, but wasn't confirmed till now).<br><br></p>
+  expected to work, but wasn't confirmed till now).<br>
+  * = To get the job done, please consult the <b>latest</b> README
+  [<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/iometer/iometer/README?rev=HEAD">here</a>]
+  first!<br><br></p>
 
   <table border="0" cellpadding="5" cellspacing="0">
     <tr>
